# square_eater

./: .stylelintrc.json  Cargo.toml  Shuttle.toml  build.rs  deno.json  dprint.json  lightningcss.ts  package.json  pnpm-lock.yaml
public/: game.d  game.wasm  index.html
public/style/: styles.css
src/: lib.rs
src/routes/: health_check.rs
style/: styles.css
templates/: index.html
