[package]
name = "square_eater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "shared"

[[bin]]
path = "src/bin/server.rs"
name = "local-server"

[[bin]]
path = "src/bin/shuttle.rs"
name = "square-eater"

[[bin]]
path = "src/bin/main.rs"
name = "game"

[build-dependencies]
askama = "0.12.1"

[dependencies]
axum = { version = "0.7.4" }
macroquad = "0.4.4"
miniquad = "0.3.12"
sapp-wasm = "=0.1.26"
serde = { version = "1.0.195", features = ["derive"] }
shipyard = { version = "0.6.2", default-features = false, features = ["proc", "std"] }
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
