[package]
name = "square_eater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "shared"

[[bin]]
path = "src/bin/server.rs"
name = "local-server"

[[bin]]
path = "src/bin/shuttle.rs"
name = "square-eater"

[[bin]]
path = "src/bin/main.rs"
name = "game"

[build-dependencies]
askama = "0.12.1"

[dependencies]
axum = { version = "0.7.4", optional = true }
cfg-if="1.0.0"
macroquad = "0.4.4"
miniquad = "0.3.12"
sapp-wasm = "=0.1.26"
serde = { version = "1.0.195", features = ["derive"] }
shipyard = { version = "0.6.2", default-features = false, features = ["proc", "std"] }
shuttle-axum = { version = "0.38.0", optional = true }
shuttle-runtime = { version = "0.38.0", optional = true }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"], optional = true }
tower-http = { version = "0.5.0", features = ["fs", "trace"], optional = true }

[features]
default = ["shuttle"]
game = []
local_server = [
  "dep:axum",
  "dep:tokio",
  "dep:tower-http",
]
shuttle = [
  "dep:axum",
  "dep:shuttle-axum",
  "dep:shuttle-runtime",
  "dep:tokio",
  "dep:tower-http",
]

